--- a/parentOrderForm.htm
+++ b/parentOrderForm.htm
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="stylesPita.css">
+		<link rel="stylesheet" type="text/css" href="styles/stylesPita.css">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	</head>
 	<header>
@@ -40,7 +40,7 @@
 				</article>
 			</div>
 			<div id="formDiv">
-				<form name="orderForm" action="process.php" method="post">
+				<form name="orderForm" action="scripts/process.php" method="post">
 					<fieldset id="custInfo">
 						<label for="Name">* Name</label>
 						<input type="text" name="fName" required="required" placeholder="First">
