--- a/weddingIndex.html
+++ b/weddingIndex.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="weddingStyles.css">
+		<link rel="stylesheet" type="text/css" href="styles/weddingStyles.css">
 		<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Dancing+Script|Freckle+Face|Homemade+Apple|Indie+Flower" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script type="text/javascript" src="weddingJS.js"></script>
+		<script type="text/javascript" src="scripts/weddingJS.js"></script>
 				<title>The Rayburn Wedding</title>
 	</head>
 	<body>
@@ -36,7 +36,7 @@
 			</div>
 			<button onclick="topFunction()" id="topBtn" title="Go to top"></button>
 			<div id="main">
-				<img src="mainBridge.jpg" alt="mainBridge">
+				<img src="media/mainBridge.jpg" alt="mainBridge">
 			</div>
 			<div id="innerContainer">
 				<div id="rsvpDiv">
@@ -46,7 +46,7 @@
 					<p id="regP">Our registry locations</p>
 					<p id="regP2">Above all else, we want to celebrate and have a great time with our freinds and family. We would really enjoy your presence! (Honestly!) However, we also enjoy new towels and cooking utensils. <br />If you feel so inclined, take a look at our wishful wares</p>
 					<a href="https://www.kohls.com/upgrade/gift_registry/kohlsgrw_home.jsp?section=list&listid=3317570&viewtype=listview&isfromsearch=true&fname=Cody&lname=Rayburn&regtype=registry.wedding,registry.baby,registry.splday" target="_blank">
-					<img src="kohlsLogo.jpg" width="125" height="125" alt="Kohl's Registry">
+					<img src="media/kohlsLogo.jpg" width="125" height="125" alt="Kohl's Registry">
 					</a>
 					<a href="http://www.etsy.com/registry/MTMyMzU0OTZ8ODI2MzgwOTM/" title="See our registry on Etsy" target="_blank"><img src="http://www.etsy.com/images/registry/see-my-registry-etsy.png" alt="See our registry on Etsy" >
 					</a>
