--- a/mapsIndex.html
+++ b/mapsIndex.html
@@ -6,7 +6,7 @@
 	<title>Maps</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-	<link rel="stylesheet" href="styles/styles.css">
+	<link rel="stylesheet" href="styles/mapStyles.css">
 
 	<script type="text/javascript" src="scripts/mapJS.js"></script>
 </head>
@@ -14,7 +14,7 @@
 			<div id="map"></div>
 			<div class="container">
 				<h1 id="head1" class="display-2">Customize</h1>
-				<form action="maps.php" method="POST" enctype="multipart/form-data">
+				<form action="scripts/maps.php" method="POST" enctype="multipart/form-data">
 					<div class="row">
 					<div class="col-lg-4" id="radioDiv">
 						<!-- <button id="drop" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
